--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-draggable": "^4.4.6",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
