--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jose": "^5.5.0",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
