--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-player": "^2.16.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
