add loading to home page

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=https://random-rainbow-database.onrender.com
-# REACT_APP_API_BASE_URL=hhttp://localhost:8080
+# REACT_APP_API_BASE_URL=https://random-rainbow-database.onrender.com
+REACT_APP_API_BASE_URL=http://localhost:8080
